--- a/pubvana/themes/default/css/default.css
+++ b/pubvana/themes/default/css/default.css
@@ -1,6 +1,6 @@
 
 		/* move special fonts to HTML head for better performance */
-@import url('http://fonts.googleapis.com/css?family=Open+Sans:200,300,400,600,700');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:200,300,400,600,700');
 
 
 /* custom template */
